fixed notification bar being 5px too tall

--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ button:hover {
 .notifBar {
 	width: 50%;
 	left: 25%;
-	height: 50px;
+	height: 45px;
 	top: -65px;
 	border-top: none;
 	border-bottom-right-radius: 3px;
